--- a/package.json
+++ b/package.json
@@ -7,15 +7,9 @@
 		"@fortawesome/fontawesome-svg-core": "^6.2.0",
 		"@fortawesome/free-solid-svg-icons": "^6.2.0",
 		"@fortawesome/react-fontawesome": "^0.2.0",
-		"@fullcalendar/bootstrap": "^5.11.2",
-		"@fullcalendar/core": "^5.11.2",
-		"@fullcalendar/daygrid": "^5.11.2",
-		"@fullcalendar/interaction": "^5.11.2",
-		"@fullcalendar/react": "^5.11.2",
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/react": "^12.0.0",
 		"@testing-library/user-event": "^13.2.1",
-		"@vtaits/react-color-picker": "^0.1.3",
 		"@types/react-dom": "^17.0.9",
 		"apexcharts": "^3.36.3",
 		"autoprefixer": "^10.4.13",
@@ -30,14 +24,10 @@
 		"echarts-for-react": "^3.0.1",
 		"eslint": "^8.30.0",
 		"formik": "^2.2.9",
-		"@react-google-maps/api": "^2.8.1",
 		"i18next": "^22.4.6",
 		"i18next-browser-languagedetector": "^6.1.4",
-		"leaflet": "^1.9.3",
-		"match-sorter": "^6.3.1",
 		"metismenujs": "^1.3.1",
-		"moment": "^2.29.4",
-		"namor": "^2.0.4",
+		"resolve-url-loader": "^5.0.0",
 		"sass": "^1.54.5",
 		"sass-loader": "^13.0.2",
 		"prop-types": "^15.8.1",
@@ -56,9 +46,7 @@
 		"react-hook-form": "^7.34.0",
 		"react-i18next": "^12.1.1",
 		"react-icons": "^3.11.0",
-		"react-image-lightbox": "^5.1.4",
 		"react-input-mask": "^2.0.4",
-		"react-leaflet": "^2.7.0",
 		"react-native-inline-datepicker": "^1.2.0",
 		"react-perfect-scrollbar": "^1.5.8",
 		"react-rating": "^2.0.5",
@@ -71,7 +59,6 @@
 		"react-select": "^5.7.0",
 		"react-sparklines": "^1.7.0",
 		"react-spring": "^9.0.0-rc.3",
-		"react-star-ratings": "^2.3.0",
 		"react-super-responsive-table": "^5.2.1",
 		"react-switch": "^7.0.0",
 		"react-table": "^7.8.0",
@@ -161,11 +148,12 @@
 		]
 	},
 	"resolutions": {
-		"moment": "2.29.1"
+		"moment": "^2.29.1"
 	},
 	"devDependencies": {
 		"eslint-config-standard-react": "^9.2.0",
 		"eslint-plugin-react": "^7.20.6",
 		"prettier": "^2.1.1"
+		
 	}
 }
