--- a/package.json
+++ b/package.json
@@ -54,10 +54,7 @@
 		"react-responsive-carousel": "^3.2.23",
 		"react-responsive-masonry": "^2.1.7",
 		"react-router-dom": "^6.6.1",
-		"react-script": "^2.0.5",
-		"react-scripts": "^5.0.1",
 		"react-select": "^5.7.0",
-		"react-sparklines": "^1.7.0",
 		"react-spring": "^9.0.0-rc.3",
 		"react-super-responsive-table": "^5.2.1",
 		"react-switch": "^7.0.0",
@@ -153,7 +150,8 @@
 	"devDependencies": {
 		"eslint-config-standard-react": "^9.2.0",
 		"eslint-plugin-react": "^7.20.6",
-		"prettier": "^2.1.1"
+		"prettier": "^2.1.1",
+		"react-scripts": "^5.0.1"
 		
 	}
 }
