--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/react": "^12.0.0",
 		"@testing-library/user-event": "^13.2.1",
-		"@types/react-dom": "^17.0.9",
+		"@vtaits/react-color-picker": "^0.1.3",
 		"apexcharts": "^3.36.3",
 		"autoprefixer": "^10.4.13",
 		"axios": "^1.2.1",
@@ -27,6 +27,7 @@
 		"i18next": "^22.4.6",
 		"i18next-browser-languagedetector": "^6.1.4",
 		"metismenujs": "^1.3.1",
+		"namor": "^2.0.4",
 		"resolve-url-loader": "^5.0.0",
 		"sass": "^1.54.5",
 		"sass-loader": "^13.0.2",
@@ -41,12 +42,12 @@
 		"react-datepicker": "^4.8.0",
 		"react-dom": "^17.0.2",
 		"react-dropzone": "^14.2.3",
-		"react-dual-listbox": "^4.0.0",
 		"react-flatpickr": "^3.10.13",
 		"react-hook-form": "^7.34.0",
 		"react-i18next": "^12.1.1",
 		"react-icons": "^3.11.0",
 		"react-input-mask": "^2.0.4",
+		"react-leaflet": "^2.7.0",
 		"react-native-inline-datepicker": "^1.2.0",
 		"react-perfect-scrollbar": "^1.5.8",
 		"react-rating": "^2.0.5",
@@ -55,7 +56,9 @@
 		"react-responsive-masonry": "^2.1.7",
 		"react-router-dom": "^6.6.1",
 		"react-select": "^5.7.0",
+		"react-sparklines": "^1.7.0",
 		"react-spring": "^9.0.0-rc.3",
+		"react-star-ratings": "^2.3.0",
 		"react-super-responsive-table": "^5.2.1",
 		"react-switch": "^7.0.0",
 		"react-table": "^7.8.0",
@@ -145,13 +148,12 @@
 		]
 	},
 	"resolutions": {
-		"moment": "^2.29.1"
+		"moment": "^2.29.4"
 	},
 	"devDependencies": {
 		"eslint-config-standard-react": "^9.2.0",
 		"eslint-plugin-react": "^7.20.6",
 		"prettier": "^2.1.1",
 		"react-scripts": "^5.0.1"
-		
 	}
 }
