--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"classnames": "^2.3.2",
 		"draft-js": "^0.11.7",
 		"echarts": "^4.9.0",
+		"aws-amplify": "^4.3.20",
 		"echarts-for-react": "^3.0.1",
 		"eslint": "^8.30.0",
 		"formik": "^2.2.9",
