--- a/package.json
+++ b/package.json
@@ -79,6 +79,8 @@
 		"antd": "^4.19.2"
 	},
 	"scripts": {
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build",
 		"start": "react-scripts start",
 		"build": "react-scripts build cli",
 		"lint": "eslint .",
