--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 /coverage
 
 # production
-/build
+# /build
 
 # misc
 .DS_Store
@@ -26,7 +26,7 @@ yarn-debug.log*
 yarn-error.log*
 
 .idea
-package-lock.json
+# package-lock.json
 .eslintcache
 debug.log
 yarn.lock
