--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "syskeeper",
 	"version": "0.1.0",
+	"homepage": "https://georgelmac.github.io/reactdashboard",
 	"private": true,
 	"dependencies": {
 		"@babel/eslint-parser": "^7.18.9",
@@ -11,8 +12,10 @@
 		"@testing-library/react": "^12.0.0",
 		"@testing-library/user-event": "^13.2.1",
 		"@vtaits/react-color-picker": "^0.1.3",
+		"antd": "^4.19.2",
 		"apexcharts": "^3.36.3",
 		"autoprefixer": "^10.4.13",
+		"aws-amplify": "^4.3.20",
 		"axios": "^1.2.1",
 		"axios-mock-adapter": "^1.21.2",
 		"bootstrap": "^5.2.3",
@@ -21,7 +24,6 @@
 		"classnames": "^2.3.2",
 		"draft-js": "^0.11.7",
 		"echarts": "^4.9.0",
-		"aws-amplify": "^4.3.20",
 		"echarts-for-react": "^3.0.1",
 		"eslint": "^8.30.0",
 		"formik": "^2.2.9",
@@ -29,9 +31,6 @@
 		"i18next-browser-languagedetector": "^6.1.4",
 		"metismenujs": "^1.3.1",
 		"namor": "^2.0.4",
-		"resolve-url-loader": "^5.0.0",
-		"sass": "^1.54.5",
-		"sass-loader": "^13.0.2",
 		"prop-types": "^15.8.1",
 		"react": "^17.0.2",
 		"react-apexcharts": "^1.4.0",
@@ -69,14 +68,16 @@
 		"redux": "^4.2.0",
 		"redux-form": "^8.3.8",
 		"redux-saga": "^1.2.2",
+		"resolve-url-loader": "^5.0.0",
+		"sass": "^1.54.5",
+		"sass-loader": "^13.0.2",
 		"simplebar-react": "^2.4.1",
 		"styled-components": "^5.2.0",
 		"sweetalert2": "^11.4.24",
 		"swiper": "^8.4.5",
 		"toastr": "^2.1.4",
 		"validator": "^13.7.0",
-		"yup": "^0.32.11",
-		"antd": "^4.19.2"
+		"yup": "^0.32.11"
 	},
 	"scripts": {
 		"predeploy": "npm run build",
@@ -156,6 +157,7 @@
 	"devDependencies": {
 		"eslint-config-standard-react": "^9.2.0",
 		"eslint-plugin-react": "^7.20.6",
+		"gh-pages": "^5.0.0",
 		"prettier": "^2.1.1",
 		"react-scripts": "^5.0.1"
 	}
